"Commented out select element for server selection in index.html"

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="bg-gray-100 h-screen flex justify-center items-center">
     <div id="nickname-container" class="flex flex-col items-center">
-        <select id="server-select" class="mb-4 p-2 border rounded w-64">
+        <!-- <select id="server-select" class="mb-4 p-2 border rounded w-64">
             <option value="server1">Server 1</option>
             <option value="server2">Server 2</option>
             <option value="server3">Server 3</option>
-        </select>
+        </select> -->
         <input type="text" id="nickname-input" placeholder="Enter your nickname" class="mb-4 p-2 border rounded w-64">
         <button id="nickname-button" class="px-4 py-2 bg-blue-500 text-white rounded">Join Chat</button>
     </div>
